kubia-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubia
  template:
    metadata:
      labels:
        app: kubia
    spec:
      containers:
      - name: kubia
        image: luksa/kubia
        ports:
        - containerPort: 8080
